--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,6 +3,11 @@ events {
 }
 
 http {
+    include mime.types;
+    default_type application/octet-stream;
+
+    sendfile on;
+    keepalive_timeout 65;
     client_max_body_size 100M;
 
     server { 
