--- a/test.env
+++ b/test.env
@@ -5,6 +5,14 @@ CELERY_BROKER_URL = 'amqp://guest:guest@rabbitmq:5672//'
 RABBITMQ_DEFAULT_USER = 'guest'
 RABBITMQ_DEFAULT_PASS = 'guest'
 
+# MySQL
+MYSQL_DATABASE = 'detuber_db'
+MYSQL_USER = 'tester'
+MYSQL_PASSWORD = 'testing'
+MYSQL_ROOT_PASSWORD = 'roottesting'
+MYSQL_HOST = 'db'
+MYSQL_PORT = '3306'
+
 # Django
 DJANGO_DEBUG = 'false'
 DJANGO_SECRET_KEY = 'INSECURE-lcrzn0&s6@aeb@z8rh+2o6c4pxvve'
