--- a/nginx/default_ssl.conf
+++ b/nginx/default_ssl.conf
@@ -14,11 +14,28 @@ http {
 
     server {
         listen 80;
-        # server_name %DOMAINNAME% www.%DOMAINNAME%;
-        
+        server_name %DOMAINNAME% www.%DOMAINNAME%;
+
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443;
+        server_name %DOMAINNAME% www.%DOMAINNAME%;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
-
 
         location / {
             proxy_pass http://web:8000;
