--- a/compose.yml
+++ b/compose.yml
@@ -12,8 +12,7 @@ services:
     env_file:
       - test.env
     depends_on:
-      db:
-        condition: service_healthy
+      - db
 
   celery-worker:
     build: .
@@ -38,13 +37,16 @@ services:
       - test.env
 
   db:
-    image: mysql:latest
+  # Can be used for testing. Should be disabled for hosted DBs.
+    image: postgres:15
     volumes:
-      - mysql_data:/var/lib/mysql
+      - postgres_data:/var/lib/postgresql/data
+    expose:
+      - "5432"
     env_file:
       - test.env
-    healthcheck: 
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"] 
+    healthcheck:
+      test: ["CMD-SHELL", "pg_is_ready -U $POSTGRES_USER"]
       interval: 30s
       timeout: 5s
       retries: 3
@@ -66,4 +68,4 @@ services:
 volumes:
   static_volume:
   media_volume:
-  mysql_data:
+  postgres_data:
