--- a/test.env
+++ b/test.env
@@ -5,13 +5,12 @@ CELERY_BROKER_URL = 'amqp://guest:guest@rabbitmq:5672//'
 RABBITMQ_DEFAULT_USER = 'guest'
 RABBITMQ_DEFAULT_PASS = 'guest'
 
-# MySQL
-MYSQL_DATABASE = 'detuber_db'
-MYSQL_USER = 'tester'
-MYSQL_PASSWORD = 'testing'
-MYSQL_ROOT_PASSWORD = 'roottesting'
-MYSQL_HOST = 'db'
-MYSQL_PORT = '3306'
+# PSQL
+POSTGRES_DB=detuber
+POSTGRES_USER=detuber
+POSTGRES_PASSWORD="INSECURE-Z3TIPfYqgRWjKzYamao7IN3PFTY9nINL6FHAwxDbaIjrDZ8JVFW" # Should be changed
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
 
 # Django
 DJANGO_DEBUG = 'false'
