Made YTDLP be able to accept cookies That would help when YouTube requires authentication when downloading files from them.

--- a/test.env
+++ b/test.env
@@ -17,3 +17,5 @@ MYSQL_PORT = '3306'
 DJANGO_DEBUG = 'false'
 DJANGO_SECRET_KEY = 'INSECURE-lcrzn0&s6@aeb@z8rh+2o6c4pxvve'
 DJANGO_ALLOWED_HOSTS = 'localhost,example.com'
+
+YTDLP_COOKIEFILE_PATH = '/app/ytdlp_cookies.txt'
