Implemented periodical Video deletion with Cron - Implemented the manage.py delete_old_videos command - Implemented Cron into the project - Modified the format of the test.env file to make it work with Cron - Currently active .ENV file now gets copied as `active.env` file

--- a/compose.yml
+++ b/compose.yml
@@ -7,6 +7,7 @@ services:
       - .:/app
       - static_volume:/app/ytviewer/staticfiles
       - media_volume:/app/ytviewer/media
+      - ./test.env:/app/active.env
     expose:
       - '8000'
     env_file:
