Added progressbars and more optimization - The project now has a cache backend (Memcached) which is currently used to check the downloading progress of pending videos. - The website now looks up the cache first before retrieving the data from DB, so now there should be times less DB operations.

--- a/compose.yml
+++ b/compose.yml
@@ -55,6 +55,12 @@ services:
       retries: 3
       start_period: 30s
 
+  memcached:
+    image: memcached:alpine
+    expose:
+      - "11211"
+    restart: unless-stopped
+
   nginx:
     image: nginx:latest
     ports:
