--- a/test.env
+++ b/test.env
@@ -18,4 +18,9 @@ DJANGO_DEBUG='false'
 DJANGO_SECRET_KEY='INSECURE-lcrzn0&s6@aeb@z8rh+2o6c4pxvve'
 DJANGO_ALLOWED_HOSTS='localhost,example.com'
 
+# Memcached
+MEMCACHED_HOST='memcached'
+MEMCACHED_PORT='11211'
+
+# Other
 YTDLP_COOKIEFILE_PATH='/app/ytdlp_cookies.txt'
